-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: None
-
Component/s: hotspot
-
b77
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8135657 | emb-9 | Eric Caspole | P4 | Resolved | Fixed | team |
| JDK-8265151 | openjdk8u302 | Eric Caspole | P4 | Resolved | Fixed | b01 |
| JDK-8264518 | 8u301 | Eric Caspole | P4 | Resolved | Fixed | b01 |
| JDK-8264550 | 7u311 | Eric Caspole | P4 | Resolved | Fixed | b01 |
Legend:
Heap Regions: (Y=young(eden), SU=young(survivor), HS=humongous(starts), HC=humongous(continues), CS=collection set, F=free, A=archive, TS=gc time stamp, PTAMS=previous top-at-mark-start, NTAMS=next top-at-mark-start)
Actually, Eden regions use "E" and Survivor regions use "S"
Heap Regions: (Y=young(eden), SU=young(survivor), HS=humongous(starts), HC=humongous(continues), CS=collection set, F=free, A=archive, TS=gc time stamp, PTAMS=previous top-at-mark-start, NTAMS=next top-at-mark-start)
Actually, Eden regions use "E" and Survivor regions use "S"
- backported by
-
JDK-8135657 G1 hs_err region dump legend out of sync with region values
-
- Resolved
-
-
JDK-8264518 G1 hs_err region dump legend out of sync with region values
-
- Resolved
-
-
JDK-8264550 G1 hs_err region dump legend out of sync with region values
-
- Resolved
-
-
JDK-8265151 G1 hs_err region dump legend out of sync with region values
-
- Resolved
-