8132148: G1 hs_err region dump legend out of sync with region values

Use E for Eden, S for Survivor, O for Old

Reviewed-by: tschatzl, tbenson